--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,14 @@
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
 @source '../**/*.js';
+
+/* === BẮT ĐẦU THAY THẾ TỪ ĐÂY === */
+
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+
+/* === KẾT THÚC THAY THẾ TẠI ĐÂY === */
+
+@import './dangnhap.css';
